# src/main/java/NC/mtroom/room/api/controller/RoomController.java
@@ -1,12 +1,11 @@
 package NC.mtroom.room.api.controller;
 
 import NC.mtroom.room.api.exeptions.RoomNotFound;
+import NC.mtroom.room.api.model.BookingDto;
 import NC.mtroom.room.api.service.IRoomService;
+import NC.mtroom.user.api.model.UserDto;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping(path = "/room")
@@ -17,24 +16,20 @@ public class RoomController {
         this.roomService = roomService;
     }
 
-//    @PostMapping
-//    public ResponseEntity registration(@RequestBody Room room){
-//        try{
-//            roomService.registration(room);
-//            return ResponseEntity.ok("Успешно сохранен");
-//        } catch (UserAlreadyExist e) {
-//            return ResponseEntity.badRequest().body(e.getMessage());
-//        } catch (Exception e) {
-//            return ResponseEntity.badRequest().body("Ошибка");
-//        }
-//    }
     @GetMapping("/{id}")
     public ResponseEntity<?> getRoom(@PathVariable Long id) throws RoomNotFound {
-       return ResponseEntity.ok(roomService.getRoom(id));
+        return ResponseEntity.ok(roomService.getRoom(id));
+    }
+    // показывает время на которое забронированы комнаты
+    @GetMapping("/booking/{id}")
+    public ResponseEntity<?> getBooking(@PathVariable Long id) throws RoomNotFound{
+        return ResponseEntity.ok(roomService.getBooking(id));
     }
 
-    @GetMapping("/history")
-    public ResponseEntity<?> getHistory (Long userID) throws Exception{
-        return ResponseEntity.ok(roomService.getUserHistory(userID));
+    @PostMapping("/booking/{id}")
+    public ResponseEntity<?> saveUser(@PathVariable Long id ,@RequestBody BookingDto bookingDto) throws Exception {
+        return ResponseEntity.ok(roomService.setBooking(id,bookingDto));
     }
+
+
 }
