# src/main/java/NC/mtroom/room/api/model/EquipmentDto.java
@@ -1,0 +1,22 @@
+package NC.mtroom.room.api.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class EquipmentDto {
+
+    private Long eqID;
+
+    private String name;
+
+    private String description;
+
+    private List<EquipmentTypeDto> equipmentType;
+
+}
